--- a/datacenter-project/#src/components/layout/_header.html
+++ b/datacenter-project/#src/components/layout/_header.html
@@ -6,7 +6,7 @@
         <nav class="header__navigation">
             <ul class="navigation">
                 <li class="navigation__menu">Компания
-                    <ul class="navigation__menu-sub block-shadow">
+                    <ul class="navigation__menu-sub">
                         <li><a class="menu-sub__link" href="about.html">О нас</a></li>
                         <li><a class="menu-sub__link" href="map.html">Схема проезда</a></li>
                         <li><a class="menu-sub__link" href="details.html">Реквизиты</a></li>
@@ -14,7 +14,7 @@
                     </ul>
                 </li>
                 <li class="navigation__menu">Услуги
-                    <ul class="navigation__menu-sub block-shadow">
+                    <ul class="navigation__menu-sub">
                         <li><a class="menu-sub__link" href="colocation.html">Размещение серверного оборудования</a></li>
                         <li><a class="menu-sub__link" href="dedicated.html">Аренда сервера</a></li>
                         <li><a class="menu-sub__link" href="software.html">Программное обеспечение</a></li>
@@ -22,7 +22,7 @@
                     </ul>
                 </li>
                 <li class="navigation__menu">Клиентам
-                    <ul class="navigation__menu-sub block-shadow">
+                    <ul class="navigation__menu-sub">
                         <li><a class="menu-sub__link" href="instruction.html">Как разместить сервер</a></li>
                         <li><a class="menu-sub__link" href="payments.html">Способы оплаты</a></li>
                         <li><a class="menu-sub__link" href="support.html">Техническая поддержка</a></li>
@@ -31,14 +31,14 @@
                     </ul>
                 </li>
                 <li class="navigation__menu">Инфо
-                    <ul class="navigation__menu-sub block-shadow">
+                    <ul class="navigation__menu-sub">
                         <li><a class="menu-sub__link" href="advices.html">Советы</a></li>
                         <li><a class="menu-sub__link" href="review.html">Отзывы</a></li>
                         <li><a class="menu-sub__link" href="partners.html">Партнерская программа</a></li>
                     </ul>
                 </li>
                 <li class="navigation__menu">Связаться с нами
-                    <ul class="navigation__menu-sub navigation__menu-sub_contact block-shadow">
+                    <ul class="navigation__menu-sub navigation__menu-sub_contact">
                         <li class="navigation__title">Отдел продаж: работа с новымы и существующими клиентами</li>
                         <li>
                             <a class="menu-sub__link link-contact link-contact_color" href="mailto:sales@datahata.by">
