--- a/datacenter-project/#src/components/main/_all-services.html
+++ b/datacenter-project/#src/components/main/_all-services.html
@@ -3,7 +3,7 @@
         <h2 class="title">Центр обработки данных (data center) "Датахата" предоставляет комплексное обслуживание</h2>
         <h2 class="all-services__title">Все услуги</h2>
         <div class="all-services__content">
-            <div class="service-card block-shadow">
+            <div class="service-card">
                 <h3 class="service-card__title">Размещение оборудования</h3>
                 <ul class="service-card__link">
                     <li><a href="unit.html">В 19" стойках</a></li>
@@ -11,26 +11,26 @@
                     <li><a href="rack.html">Аренда стойки</a></li>
                 </ul>
             </div>
-            <div class="service-card block-shadow">
+            <div class="service-card">
                 <h3 class="service-card__title">Серверы</h3>
                 <ul class="service-card__link">
                     <li><a href="dedic.html">Аренда сервера</a></li>
                     <li><a href="server.html">Купить сервер</a></li>
                 </ul>
             </div>
-            <div class="service-card block-shadow">
+            <div class="service-card">
                 <h3 class="service-card__title">Облачный хостинг</h3>
                 <ul class="service-card__link">
                     <li><a href="https://mycloud.by/">Узнать подробнее</a></li>
                 </ul>
             </div>
-            <div class="service-card block-shadow">
+            <div class="service-card">
                 <h3 class="service-card__title">IT-аутсорсинг</h3>
                 <ul class="service-card__link">
                     <li><a href="https://xn--80aikcthwb9g.xn--90ais/">Узнать подробнее</a></li>
                 </ul>
             </div>
-            <div class="service-card block-shadow">
+            <div class="service-card">
                 <h3 class="service-card__title">Другие услуги</h3>
                 <ul class="service-card__link">
                     <li><a href="ssl.html">SSL-сертификат</a></li>
@@ -41,7 +41,7 @@
 
                 </ul>
             </div>
-            <div class="service-card block-shadow">
+            <div class="service-card">
                 <h3 class="service-card__title">Программное обеспечение</h3>
                 <ul class="service-card__link">
                     <li><a href="soft.html">ISPsystem</a></li>
