--- a/datacenter-project/#src/scss/base/buttons.scss
+++ b/datacenter-project/#src/scss/base/buttons.scss
@@ -8,8 +8,8 @@
 
   &_bordered{
     border: 1px solid transparent;
-    background: linear-gradient(0deg, $color-gradient-primary 0.08%, $color-gradient-secondary 155.74%);
     box-shadow: inset 0 0 0 100vw $color-light;
+    @extend %gradient;
 
     span {
       @extend %gradient-text;
@@ -25,7 +25,7 @@
     }
 
     &:hover {
-      @extend %gradient-bg;
+      @extend %gradient;
       box-shadow: none !important;
     }
 
@@ -40,11 +40,21 @@
   }
 
   &_colored{
-    background: linear-gradient(90deg, $color-gradient-primary 0%, $color-gradient-secondary 100%);
+    @extend %gradient;
 
     &>*{
       @include font-style($size: 1.6rem);
       color: $color-light;
+    }
+  }
+
+
+  &_disabled{
+    background: $color-light-grey;
+
+    &>*{
+      @include font-style($size: 1.6rem);
+      color: $color-dark;
     }
   }
 
