--- a/datacenter-project/#src/scss/components/main/all-services.scss
+++ b/datacenter-project/#src/scss/components/main/all-services.scss
@@ -36,6 +36,7 @@
             width: 100%;
             padding: 35px 45px 40px;
             cursor: pointer;
+            @extend %border-shadow;
 
             @media (max-width: 768px) {
                 padding: 25px 24px 30px;
