refactor: style for calculator

--- a/datacenter-project/#src/components/base/_calculator.html
+++ b/datacenter-project/#src/components/base/_calculator.html
@@ -84,5 +84,8 @@
                 <div class="total__cost"></div>
             </div>
         </div>
+        <div class="point-to-scroll"></div>
     </div>
 </div>
+
+
