--- a/datacenter-project/#src/scss/style.scss
+++ b/datacenter-project/#src/scss/style.scss
@@ -13,9 +13,10 @@
 @import "./base/burger-menu";
 @import "./base/accordion";
 @import "./base/footer-navigation";
-@import "base/header-navigation";
+@import "./base/header-navigation";
 @import "./base/contacts_nav";
 @import "./base/table";
+@import "./base/calculator";
 
 
 //layout
