--- a/datacenter-project/#src/scss/base/buttons.scss
+++ b/datacenter-project/#src/scss/base/buttons.scss
@@ -9,7 +9,7 @@
   &_bordered{
     border: 1px solid transparent;
     box-shadow: inset 0 0 0 100vw $color-light;
-    @extend %gradient;
+    @include gradient;
 
     span {
       @extend %gradient-text;
@@ -25,7 +25,7 @@
     }
 
     &:hover {
-      @extend %gradient;
+      @include gradient;
       box-shadow: none !important;
     }
 
@@ -40,7 +40,7 @@
   }
 
   &_colored{
-    @extend %gradient;
+    @include gradient;
 
     &>*{
       @include font-style($size: 1.6rem);
