fix: fix path to icons

--- a/datacenter-project/#src/components/services/colo/_colo.html
+++ b/datacenter-project/#src/components/services/colo/_colo.html
@@ -14,7 +14,7 @@
             <div class="accordion__section">
                 <div class="accordion__header">
                     <p>В башенных корпусах</p>
-                    <img src="../img/icons/btn-rotate.svg" class="button__arrow" alt="arrow">
+                    <img src="img/icons/btn-rotate.svg" class="button__arrow" alt="arrow">
                 </div>
                 <div class="accordion__body">
                     @@include('./tower/_tower.html')
@@ -23,7 +23,7 @@
             <div class="accordion__section">
                 <div class="accordion__header">
                     <p>Дополнительные услуги</p>
-                    <img src="../img/icons/btn-rotate.svg" class="button__arrow" alt="arrow">
+                    <img src="img/icons/btn-rotate.svg" class="button__arrow" alt="arrow">
                 </div>
                 <div class="accordion__body">
                     <div class="services__content">
@@ -38,7 +38,7 @@
             <div class="accordion__section">
                 <div class="accordion__header">
                     <p>Аренда стойки</p>
-                    <img src="../img/icons/btn-rotate.svg" class="button__arrow" alt="arrow">
+                    <img src="img/icons/btn-rotate.svg" class="button__arrow" alt="arrow">
                 </div>
                 <div class="accordion__body">
                     <div class="services__content">
