fix: fix path to icons

--- a/datacenter-project/#src/components/services/colo/_colo.html
+++ b/datacenter-project/#src/components/services/colo/_colo.html
@@ -5,7 +5,7 @@
             <div class="accordion__section">
                 <div class="accordion__header">
                     <p>В 19" стойках</p>
-                    <img src="../img/icons/btn-rotate.svg" class="button__arrow button__arrow_rotate" alt="arrow">
+                    <img src="img/icons/btn-rotate.svg" class="button__arrow button__arrow_rotate" alt="arrow">
                 </div>
                 <div class="accordion__body" id="first-open-body">
                     @@include('./unit/_unit.html')
