fix: delete useless check

--- a/datacenter-project/#src/components/base/_calculator.html
+++ b/datacenter-project/#src/components/base/_calculator.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="cost-calculate cost-calculate_input">
                     <p class="error">пожалуйста, введите число</p>
-                    <input type="text" id="ip" maxlength="3" placeholder="Количество IP">
+                    <input type="number" id="ip" maxlength="3" placeholder="Количество IP">
                 </div>
                 <div class="cost-calculate cost-calculate_checkbox">
                     <p>Второй блок питания</p>
