--- a/datacenter-project/#src/scss/base/base.scss
+++ b/datacenter-project/#src/scss/base/base.scss
@@ -82,6 +82,12 @@ h4 {
   }
 }
 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 //Стиль для заголовков секций
 
 .title {
