refactor: refactor soft pages

--- a/datacenter-project/#src/components/base/_calculator.html
+++ b/datacenter-project/#src/components/base/_calculator.html
@@ -1,5 +1,5 @@
 <div class="calculator__overlay">
-    <div class="calculator__container">
+    <div class="calculator calculator__container">
         <div class="calculator__form">
             <div class="swipe-line swipe-button" data-swipe-threshold="20"
                  data-swipe-timeout="500" data-swipe-ignore="false">
