--- a/datacenter-project/#src/components/main/_all-services.html
+++ b/datacenter-project/#src/components/main/_all-services.html
@@ -45,7 +45,7 @@
                 <h3 class="service-card__title">Программное обеспечение</h3>
                 <ul class="service-card__link">
                     <li><a href="soft.html">ISPsystem</a></li>
-                    <li><a href="#">OnlyOffice</a></li>
+                    <li><a href="onlyoffice.html">OnlyOffice</a></li>
                 </ul>
             </div>
         </div>
