refactor: refactor other

--- a/datacenter-project/#src/components/main/_all-services.html
+++ b/datacenter-project/#src/components/main/_all-services.html
@@ -35,17 +35,14 @@
                 <ul class="service-card__link">
                     <li><a href="ssl.html">SSL-сертификат</a></li>
                     <li><a href="domain.html">Регистрация домена</a></li>
-
-                    <!--                        <li><a href="ddos.html">Защита отDDoS</a></li>-->
-
-
+                    <li><a href="backup.html">Место под бэкапы</a></li>
                 </ul>
             </div>
             <div class="service-card">
                 <h3 class="service-card__title">Программное обеспечение</h3>
                 <ul class="service-card__link">
                     <li><a href="soft.html">ISPsystem</a></li>
-                    <li><a href="#">OnlyOffice</a></li>
+                    <li><a href="onlyoffice.html">OnlyOffice</a></li>
                 </ul>
             </div>
         </div>
