--- a/datacenter-project/#src/scss/style.scss
+++ b/datacenter-project/#src/scss/style.scss
@@ -46,8 +46,7 @@
 @import "./components/company/contacts/contacts";
 
 //services
-@import "./components/services/colo/unit";
-@import "./components/services/colo/colo";
+@import "components/services/services";
 
 
 @import "./components/advices";
